Fixed slider issue in firefox and hero buttons size on mobile.

--- a/server/scss/home/herobuttons.scss
+++ b/server/scss/home/herobuttons.scss
@@ -9,6 +9,11 @@
   font-weight: 400;
   font-size: 20px;
   box-shadow: 0px 1px 2px $Hero-Btn-Shadow-Color-Close, 0px 4px 5px 1px $Hero-Btn-Shadow-Color-Far;
+  @media screen and (max-width: $phone-max-width) {
+    width: 96px;
+    height: 30px;
+    font-size: 16px;
+  }
 }
 
 .hero__cta__button--primary {
@@ -16,7 +21,7 @@
   margin-right: 36px;
   font-weight: 500;
   color: $Pri-Button-Text-Color;
-  border-color: $Pri-Button-BK-Color;
+  border: 1px solid $Pri-Button-BK-Color;
   background-color: $Pri-Button-BK-Color;
   transition: border-color 0.5s ease-in, transform 0.25s ease-in, box-shadow 0.25s ease-in;
   &:hover {
@@ -33,7 +38,7 @@
 .hero__cta__button--secondary {
   @include hero__cta__button;
   color: $Sec-Button-Color;
-  border-color: $Sec-Button-Color;
+  border: 1px solid $Sec-Button-Color;
   background-color: rgba(0, 0, 0, 0);
   text-shadow: 0px 0px 20px $Hero-Btn-Shadow-Color-Close;
   box-shadow: inset 0px 1px 10px 20px $Hero-Btn-Shadow-Color-Close;
@@ -45,6 +50,9 @@
   &:focus {
     border-radius: 5px;
     outline-color: $Nav-Color-Highlight;
+  }
+  @media screen and (max-width: $phone-max-width) {
+    width: 130px;
   }
 }
 
